# embedded-lvgl

./: .clangd  .mega-linter.yml  CMakeLists.txt  CMakePresets.json  README.md  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  linting-formatting.yml  release-please.yml  security.yml
examples/widgets/: CMakeLists.txt  Main.cpp
lvgl/: CMakeLists.txt
lvgl/configuration/: lv_conf.h
lvgl/core/: CMakeLists.txt  Color.cpp  Color.hpp  Event.hpp  Object.cpp  Object.hpp  Position.cpp  Position.hpp  Screen.cpp  Screen.hpp  Scroll.cpp  Scroll.hpp
lvgl/interfaces/: CMakeLists.txt  Controller.cpp  Controller.hpp
lvgl/widgets/: Button.cpp  Button.hpp  CMakeLists.txt  Label.cpp  Label.hpp  Led.cpp  Led.hpp
